[gd_scene load_steps=3 format=3 uid="uid://dcod07ms58a3w"]

[ext_resource type="Theme" uid="uid://bgod22o80c88u" path="res://Assets/GameTheme.tres" id="1_te8ay"]
[ext_resource type="Script" path="res://Objects/fallacies.gd" id="1_vxskh"]

[node name="Fallacies" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vxskh")

[node name="Description" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.523438
anchor_top = 0.0987654
anchor_right = 0.892077
anchor_bottom = 0.87937
offset_right = 0.328003
offset_bottom = 0.167969
metadata/_edit_use_anchors_ = true

[node name="DescriptionText" type="RichTextLabel" parent="Description"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.052506
anchor_top = 0.0434783
anchor_right = 0.940334
anchor_bottom = 0.922925
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_te8ay")
text = "A description of the currently selected fallacy?"
metadata/_edit_use_anchors_ = true

[node name="FallacyList" type="ItemList" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.207465
anchor_top = 0.101852
anchor_right = 0.510417
anchor_bottom = 0.87963
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_te8ay")
metadata/_edit_use_anchors_ = true

[node name="Submit" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.8825
anchor_top = 0.83163
anchor_right = 0.9375
anchor_bottom = 0.87963
offset_left = 0.359985
offset_top = 0.104004
grow_horizontal = 0
grow_vertical = 0
text = "Submit"
metadata/_edit_use_anchors_ = true

[connection signal="item_clicked" from="FallacyList" to="." method="_on_fallacy_list_item_clicked"]
